<resources>
    <string name="app_name" translatable="false">Open Share Location Plugin</string>
    <string name="title_activity_share_location">Share location</string>
    <string name="title_activity_show_location">Show location</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="action_directions">Directions</string>
    <string name="action_settings">Settings</string>
    <string name="action_fix_to_location">Fix position</string>
    <string name="action_unfix_from_location">Unfix position</string>
    <string name="action_copy_location">Copy Location</string>
    <string name="action_share_location">Share Location</string>

    <string name="location_disabled">Location sharing is disabled</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>

    <string name="pref_tile_provider">Tile provider</string>
    <string name="pref_scale_tiles">Scale tiles</string>
    <string name="pref_scale_tiles_summary">Scale tiles up for the hard of seeing or on high DPI displays</string>
    <string-array name="pref_tile_provider_titles" translatable="false">
        <item>OpenStreetMap</item>
        <item>Cycle Map</item>
        <item>Topographic Map</item>
    </string-array>

    <string name="liberapay">Donate on Liberapay</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="merge_dialog">
        This plugin has been merged into Conversations 2.2!
        After you have updated Conversations you may wish to uninstall this plugin and use the built in version.
        If this plugin has been useful to you, please consider buying me a coffee!
    </string>

    <string name="about_text" translatable="false">
      <b>Open Show Location Plugin</b> for Conversations
      \nCopyright © 2015, Sam Whited\n
      \nAll rights reserved.
      \n\n
      Redistribution and use in source and binary forms, with or without
      modification, are permitted provided that the following conditions are met:
      \n\n
      1. Redistributions of source code must retain the above copyright notice, this
      list of conditions and the following disclaimer.
      \n\n
      2. Redistributions in binary form must reproduce the above copyright notice,
      this list of conditions and the following disclaimer in the documentation
      and/or other materials provided with the distribution.
      \n\n
      THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
      ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
      WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
      DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
      FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
      DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
      SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
      CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
      OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
      OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
      \n\n\n<b>Open Source Usage</b>
      \n\nhttps://github.com/osmdroid/osmdroid\n(Apache License)
      \n\nhttps://github.com/siacs/Conversations\n(GPL)
      \n\nhttps://github.com/siacs/ShareLocationPlugin\n(GPL)

      \n\n\n<b>Maps</b>
      \n\nMaps by OpenMap (https://openmap.lt/), Thunderforest (http://thunderforest.com/), OpenTopoMap (https://opentopomap.org/),
      and Open Street Map (https://www.openstreetmap.org). Copyright restrictions may apply.
    </string>
    <string name="action_show_public_transport">Show public transport</string>
</resources>
