<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_share_location"
          app:showAsAction="ifRoom"
          android:showAsAction="ifRoom"
          android:title="@string/action_share_location"
          android:actionProviderClass="android.widget.ShareActionProvider"
          tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_directions"
          android:title="@string/action_directions"
          android:icon="@drawable/ic_directions_white_24dp"
          app:showAsAction="ifRoom"
          android:showAsAction="ifRoom"
          tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_copy_location"
          android:title="@string/action_copy_location"
          android:icon="@drawable/ic_content_copy_white_24dp"
          app:showAsAction="ifRoom"
          android:showAsAction="ifRoom"
          tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"
          android:showAsAction="never"
          tools:ignore="AppCompatResource"/>
</menu>
